v/0.6.0/_sources/examples/02_diagnostic_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/02_diagnostic_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_02_diagnostic_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_02_diagnostic_workflow.py:


Running Diagnostic Inference
============================

Basic prognostic + diagnostic inference workflow.

This example will demonstrate how to run a deterministic inference workflow that couples
a prognostic model with a diagnostic model. This diagnostic model will predict a new
atmospheric quantity from the predicted fields of the prognostic.

In this example you will learn:

- How to instantiate a prognostic model
- How to instantiate a diagnostic model
- Creating a data source and IO object
- Running the built in diagnostic workflow
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 38-42

Set Up
------
For this example, the built in diagnostic workflow :py:meth:`earth2studio.run.diagnostic`
will be used.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - diagnostic start
   :end-before: # sphinx - diagnostic end

.. GENERATED FROM PYTHON SOURCE LINES 51-57

Thus, we need the following:

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Diagnostic Model: Use the built in precipitation AFNO model :py:class:`earth2studio.models.dx.PrecipitationAFNO`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 59-84

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.dx import PrecipitationAFNO
    from earth2studio.models.px import FCN

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    prognostic_model = FCN.load_model(package)

    package = PrecipitationAFNO.load_default_package()
    diagnostic_model = PrecipitationAFNO.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading fcn.zip: 0%|          | 0.00/267M [00:00<?, ?B/s]    Downloading fcn.zip: 1%|          | 2.63M/267M [00:00<00:10, 27.5MB/s]    Downloading fcn.zip: 3%|▎         | 6.84M/267M [00:00<00:08, 30.5MB/s]    Downloading fcn.zip: 9%|▉         | 24.8M/267M [00:00<00:02, 94.6MB/s]    Downloading fcn.zip: 13%|█▎        | 34.6M/267M [00:00<00:03, 74.4MB/s]    Downloading fcn.zip: 18%|█▊        | 47.2M/267M [00:00<00:03, 75.2MB/s]    Downloading fcn.zip: 21%|██        | 54.9M/267M [00:00<00:03, 56.7MB/s]    Downloading fcn.zip: 23%|██▎       | 61.9M/267M [00:01<00:03, 60.0MB/s]    Downloading fcn.zip: 30%|███       | 80.4M/267M [00:01<00:02, 91.1MB/s]    Downloading fcn.zip: 34%|███▍      | 90.7M/267M [00:01<00:02, 69.1MB/s]    Downloading fcn.zip: 39%|███▉      | 105M/267M [00:01<00:02, 78.4MB/s]     Downloading fcn.zip: 43%|████▎     | 113M/267M [00:01<00:02, 64.8MB/s]    Downloading fcn.zip: 49%|████▉     | 131M/267M [00:01<00:01, 88.4MB/s]    Downloading fcn.zip: 53%|█████▎    | 142M/267M [00:02<00:01, 82.4MB/s]    Downloading fcn.zip: 60%|██████    | 160M/267M [00:02<00:01, 107MB/s]     Downloading fcn.zip: 65%|██████▍   | 173M/267M [00:02<00:00, 98.6MB/s]    Downloading fcn.zip: 71%|███████   | 188M/267M [00:02<00:00, 96.0MB/s]    Downloading fcn.zip: 78%|███████▊  | 207M/267M [00:02<00:00, 118MB/s]     Downloading fcn.zip: 82%|████████▏ | 220M/267M [00:02<00:00, 107MB/s]    Downloading fcn.zip: 89%|████████▉ | 238M/267M [00:02<00:00, 127MB/s]    Downloading fcn.zip: 95%|█████████▍| 252M/267M [00:02<00:00, 121MB/s]    Downloading fcn.zip: 100%|██████████| 267M/267M [00:03<00:00, 92.7MB/s]
    Downloading precipitation_afno.zip: 0%|          | 0.00/261M [00:00<?, ?B/s]    Downloading precipitation_afno.zip: 7%|▋         | 18.6M/261M [00:00<00:01, 195MB/s]    Downloading precipitation_afno.zip: 14%|█▍        | 37.5M/261M [00:00<00:01, 197MB/s]    Downloading precipitation_afno.zip: 22%|██▏       | 56.4M/261M [00:00<00:01, 197MB/s]    Downloading precipitation_afno.zip: 29%|██▉       | 75.2M/261M [00:00<00:00, 196MB/s]    Downloading precipitation_afno.zip: 36%|███▌      | 94.1M/261M [00:00<00:00, 196MB/s]    Downloading precipitation_afno.zip: 43%|████▎     | 113M/261M [00:00<00:00, 195MB/s]     Downloading precipitation_afno.zip: 50%|█████     | 132M/261M [00:00<00:00, 196MB/s]    Downloading precipitation_afno.zip: 58%|█████▊    | 151M/261M [00:00<00:00, 197MB/s]    Downloading precipitation_afno.zip: 65%|██████▌   | 170M/261M [00:00<00:00, 196MB/s]    Downloading precipitation_afno.zip: 72%|███████▏  | 189M/261M [00:01<00:00, 197MB/s]    Downloading precipitation_afno.zip: 79%|███████▉  | 208M/261M [00:01<00:00, 195MB/s]    Downloading precipitation_afno.zip: 87%|████████▋ | 227M/261M [00:01<00:00, 197MB/s]    Downloading precipitation_afno.zip: 94%|█████████▍| 245M/261M [00:01<00:00, 197MB/s]    Downloading precipitation_afno.zip: 100%|██████████| 261M/261M [00:01<00:00, 196MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 85-91

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

.. GENERATED FROM PYTHON SOURCE LINES 93-102

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 8
    io = run.diagnostic(
        ["2021-06-01"], nsteps, prognostic_model, diagnostic_model, data, io
    )

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-04-15 06:31:19.590 | INFO     | earth2studio.run:diagnostic:190 - Running diagnostic workflow!
    2025-04-15 06:31:19.590 | INFO     | earth2studio.run:diagnostic:197 - Inference device: cuda
    2025-04-15 06:31:19.680 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2021-06-01 00:00:00 lead 0:00:00
    Fetching GFS for 2021-06-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2025-04-15 06:31:20.141 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u10m at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2021-06-01 00:00:00:   4%|▍         | 1/26 [00:01<00:48,  1.92s/it]                                                                                        2025-04-15 06:31:22.064 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v10m at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:   4%|▍         | 1/26 [00:01<00:48,  1.92s/it]    Fetching GFS for 2021-06-01 00:00:00:   8%|▊         | 2/26 [00:03<00:39,  1.65s/it]                                                                                        2025-04-15 06:31:23.515 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:   8%|▊         | 2/26 [00:03<00:39,  1.65s/it]    Fetching GFS for 2021-06-01 00:00:00:  12%|█▏        | 3/26 [00:04<00:36,  1.60s/it]                                                                                        2025-04-15 06:31:25.064 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: sp at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  12%|█▏        | 3/26 [00:04<00:36,  1.60s/it]    Fetching GFS for 2021-06-01 00:00:00:  15%|█▌        | 4/26 [00:06<00:34,  1.58s/it]                                                                                        2025-04-15 06:31:26.619 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: msl at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  15%|█▌        | 4/26 [00:06<00:34,  1.58s/it]    Fetching GFS for 2021-06-01 00:00:00:  19%|█▉        | 5/26 [00:08<00:34,  1.65s/it]                                                                                        2025-04-15 06:31:28.391 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  19%|█▉        | 5/26 [00:08<00:34,  1.65s/it]    Fetching GFS for 2021-06-01 00:00:00:  23%|██▎       | 6/26 [00:10<00:35,  1.79s/it]                                                                                        2025-04-15 06:31:30.463 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u1000 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  23%|██▎       | 6/26 [00:10<00:35,  1.79s/it]    Fetching GFS for 2021-06-01 00:00:00:  27%|██▋       | 7/26 [00:11<00:32,  1.70s/it]                                                                                        2025-04-15 06:31:31.974 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v1000 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  27%|██▋       | 7/26 [00:11<00:32,  1.70s/it]    Fetching GFS for 2021-06-01 00:00:00:  31%|███       | 8/26 [00:13<00:29,  1.63s/it]                                                                                        2025-04-15 06:31:33.446 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  31%|███       | 8/26 [00:13<00:29,  1.63s/it]    Fetching GFS for 2021-06-01 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.58s/it]                                                                                        2025-04-15 06:31:34.910 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u850 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  35%|███▍      | 9/26 [00:14<00:26,  1.58s/it]    Fetching GFS for 2021-06-01 00:00:00:  38%|███▊      | 10/26 [00:16<00:24,  1.54s/it]                                                                                         2025-04-15 06:31:36.377 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v850 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  38%|███▊      | 10/26 [00:16<00:24,  1.54s/it]    Fetching GFS for 2021-06-01 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.52s/it]                                                                                         2025-04-15 06:31:37.831 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z850 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  42%|████▏     | 11/26 [00:17<00:22,  1.52s/it]    Fetching GFS for 2021-06-01 00:00:00:  46%|████▌     | 12/26 [00:19<00:21,  1.53s/it]                                                                                         2025-04-15 06:31:39.400 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u500 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  46%|████▌     | 12/26 [00:19<00:21,  1.53s/it]    Fetching GFS for 2021-06-01 00:00:00:  50%|█████     | 13/26 [00:21<00:21,  1.63s/it]                                                                                         2025-04-15 06:31:41.258 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v500 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  50%|█████     | 13/26 [00:21<00:21,  1.63s/it]    Fetching GFS for 2021-06-01 00:00:00:  54%|█████▍    | 14/26 [00:22<00:19,  1.60s/it]                                                                                         2025-04-15 06:31:42.781 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  54%|█████▍    | 14/26 [00:22<00:19,  1.60s/it]    Fetching GFS for 2021-06-01 00:00:00:  58%|█████▊    | 15/26 [00:24<00:17,  1.58s/it]                                                                                         2025-04-15 06:31:44.314 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t500 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  58%|█████▊    | 15/26 [00:24<00:17,  1.58s/it]    Fetching GFS for 2021-06-01 00:00:00:  62%|██████▏   | 16/26 [00:25<00:15,  1.54s/it]                                                                                         2025-04-15 06:31:45.761 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z50 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  62%|██████▏   | 16/26 [00:25<00:15,  1.54s/it]    Fetching GFS for 2021-06-01 00:00:00:  65%|██████▌   | 17/26 [00:27<00:13,  1.54s/it]                                                                                         2025-04-15 06:31:47.318 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: r500 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  65%|██████▌   | 17/26 [00:27<00:13,  1.54s/it]    Fetching GFS for 2021-06-01 00:00:00:  69%|██████▉   | 18/26 [00:28<00:12,  1.52s/it]                                                                                         2025-04-15 06:31:48.774 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: r850 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  69%|██████▉   | 18/26 [00:28<00:12,  1.52s/it]    Fetching GFS for 2021-06-01 00:00:00:  73%|███████▎  | 19/26 [00:30<00:10,  1.51s/it]                                                                                         2025-04-15 06:31:50.275 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  73%|███████▎  | 19/26 [00:30<00:10,  1.51s/it]    Fetching GFS for 2021-06-01 00:00:00:  77%|███████▋  | 20/26 [00:31<00:08,  1.49s/it]                                                                                         2025-04-15 06:31:51.727 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u100m at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  77%|███████▋  | 20/26 [00:31<00:08,  1.49s/it]    Fetching GFS for 2021-06-01 00:00:00:  81%|████████  | 21/26 [00:32<00:07,  1.40s/it]                                                                                         2025-04-15 06:31:52.918 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v100m at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  81%|████████  | 21/26 [00:32<00:07,  1.40s/it]    Fetching GFS for 2021-06-01 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.35s/it]                                                                                         2025-04-15 06:31:54.138 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: u250 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  85%|████████▍ | 22/26 [00:33<00:05,  1.35s/it]    Fetching GFS for 2021-06-01 00:00:00:  88%|████████▊ | 23/26 [00:35<00:04,  1.43s/it]                                                                                         2025-04-15 06:31:55.745 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: v250 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  88%|████████▊ | 23/26 [00:35<00:04,  1.43s/it]    Fetching GFS for 2021-06-01 00:00:00:  92%|█████████▏| 24/26 [00:37<00:02,  1.44s/it]                                                                                         2025-04-15 06:31:57.222 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z250 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  92%|█████████▏| 24/26 [00:37<00:02,  1.44s/it]    Fetching GFS for 2021-06-01 00:00:00:  96%|█████████▌| 25/26 [00:38<00:01,  1.52s/it]                                                                                         2025-04-15 06:31:58.932 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t250 at 2021-06-01 00:00:00_0:00:00
    Fetching GFS for 2021-06-01 00:00:00:  96%|█████████▌| 25/26 [00:38<00:01,  1.52s/it]    Fetching GFS for 2021-06-01 00:00:00: 100%|██████████| 26/26 [00:40<00:00,  1.51s/it]    Fetching GFS for 2021-06-01 00:00:00: 100%|██████████| 26/26 [00:40<00:00,  1.55s/it]
    2025-04-15 06:32:00.589 | SUCCESS  | earth2studio.run:diagnostic:220 - Fetched data from GFS
    2025-04-15 06:32:00.592 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:32:00.596 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:32:00.612 | INFO     | earth2studio.run:diagnostic:252 - Inference starting!
    Running inference:   0%|          | 0/9 [00:00<?, ?it/s]    Running inference:  11%|█         | 1/9 [00:00<00:03,  2.17it/s]    Running inference:  22%|██▏       | 2/9 [00:00<00:02,  2.40it/s]    Running inference:  33%|███▎      | 3/9 [00:01<00:02,  2.48it/s]    Running inference:  44%|████▍     | 4/9 [00:01<00:02,  2.49it/s]    Running inference:  56%|█████▌    | 5/9 [00:02<00:01,  2.43it/s]    Running inference:  67%|██████▋   | 6/9 [00:02<00:01,  2.35it/s]    Running inference:  78%|███████▊  | 7/9 [00:02<00:00,  2.25it/s]    Running inference:  89%|████████▉ | 8/9 [00:03<00:00,  2.16it/s]    Running inference: 100%|██████████| 9/9 [00:04<00:00,  2.05it/s]    Running inference: 100%|██████████| 9/9 [00:04<00:00,  2.23it/s]
    2025-04-15 06:32:04.653 | SUCCESS  | earth2studio.run:diagnostic:266 - Inference complete
    /
    ├── lat (720,) float64
    ├── lead_time (9,) int64
    ├── lon (1440,) float64
    ├── time (1,) int64
    └── tp (1, 9, 720, 1440) float32





.. GENERATED FROM PYTHON SOURCE LINES 103-114

Post Processing
---------------
The last step is to plot the resulting predicted total precipitation. The power of
diagnostic models is that they allow the prediction of any variable from a pre-trained
prognostic model.

.. note::
  The built in workflow will only save the direct outputs of the diagnostic. In this
  example only total precipitation is accessible for plotting. If you wish to save
  outputs of both the prognostic and diagnostic, we recommend writing a custom
  workflow.

.. GENERATED FROM PYTHON SOURCE LINES 116-158

.. code-block:: Python

    from datetime import datetime

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt
    import numpy as np

    forecast = datetime(2021, 6, 1)
    variable = "tp"
    step = 8  # lead time = 48 hrs

    plt.close("all")
    # Create a Orthographic projection of USA
    projection = ccrs.Orthographic(-100, 40)

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    levels = np.arange(0.0, 0.01, 0.001)
    im = ax.contourf(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        levels,
        transform=ccrs.PlateCarree(),
        vmax=0.01,
        vmin=0.00,
        cmap="terrain",
    )

    # Set title
    ax.set_title(f"{forecast.strftime('%Y-%m-%d')} - Lead time: {6*step}hrs")

    # Add coastlines and gridlines6
    ax.set_extent([220, 340, 20, 70])  # [lat min, lat max, lon min, lon max]
    ax.coastlines()
    ax.gridlines()
    plt.colorbar(
        im, ax=ax, ticks=levels, shrink=0.75, pad=0.04, label="Total precipitation (m)"
    )

    plt.savefig("outputs/02_tp_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_02_diagnostic_workflow_001.png
   :alt: 2021-06-01 - Lead time: 48hrs
   :srcset: /examples/images/sphx_glr_02_diagnostic_workflow_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 10.855 seconds)


.. _sphx_glr_download_examples_02_diagnostic_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_diagnostic_workflow.ipynb <02_diagnostic_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_diagnostic_workflow.py <02_diagnostic_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 02_diagnostic_workflow.zip <02_diagnostic_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
